--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,6 +5,24 @@
     <title>Login</title>
 </head>
 <body>
-<h1>Login</h1>
+
+<main>
+    <h1>Login</h1>
+
+    <form action="/login" method="POST">
+        <div>
+            <label>
+                <input name="username">
+            </label>
+        </div>
+        <div>
+            <label>
+                <input name="password" type="password">
+            </label>
+        </div>
+        <button type="submit">Sign In</button>
+    </form>
+</main>
+
 </body>
 </html>
