--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
     <p>This is authentication service</p>
     <nav>
         <ul>
-            <li><a href="/static">Index</a></li>
+            <li><a href="/">Index</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
         </ul>
